--- a/src/assets/demo.html
+++ b/src/assets/demo.html
@@ -69,7 +69,7 @@
            <div class="media offset espeis" alt="flipbook">
               <img src="./icons/flipbook.svg" class="icon" alt="">
               <div class="media-body ">
-                  <object type="text/html" data="http://cursoste.tecvirtual.mx/cursos/dct/documentacion/eel/diplomados/images/flipbook/finanzas/index.html#book5/page4-page5" class="flipbookv">
+                  <object type="text/html" data="https://cursoste.tecvirtual.mx/cursos/dct/documentacion/eel/diplomados/images/flipbook/finanzas/index.html#book5/page4-page5" class="flipbookv">
                   </object>
               </div>
             </div>
