--- a/src/assets/demo.html
+++ b/src/assets/demo.html
@@ -65,7 +65,7 @@
               </div>
             </div>
             <!---->
-          <!--CodeComponent-->
+          <!--CodeComponent-
            <div class="media offset espeis" alt="flipbook">
               <img src="./icons/flipbook.svg" class="icon" alt="">
               <div class="media-body ">
